--- a/dev/frontend/src/index.css
+++ b/dev/frontend/src/index.css
@@ -1,32 +1,13 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: center;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.login-form,
-.fgtPsw-form {
-  max-width: 400px;
-}
-#login, #frgtPsw {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.ant-col-rtl .login-form-forgot {
-  float: left;
-}
-.login-form-button,
-.fgtPsw-form-button {
-  width: 100%;
 }
