--- a/dev/frontend/src/index.css
+++ b/dev/frontend/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-#login, #fgtPass {
+#login, #fgtPass, #registration {
   display: flex;
   align-items: center;
   justify-content: center;
