--- a/fend/src/index.css
+++ b/fend/src/index.css
@@ -37,3 +37,11 @@ code {
 .errorMessage {
   color: red;
 }
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+.navbar-brand > img {
+  padding: 7px 14px;
+}
